overflow fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,6 @@ body {
 body {
   background-color: #181a1f;
   color: #ebebeb;
-  overflow: hidden;
 }
 
 .border-main-color {
